--- a/index.html
+++ b/index.html
@@ -1,7 +1,25 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <link rel="stylesheet" href="git2.css">
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<head>
+<div id="head">
+<h1 id="title">Blog</h1>
+</head>
+</div>
+<ul>
+<li><a href="homegit.html">About</a></li>
+<li><a href="projectgit.html">Projects</a></li>
+</ul>
+<h2 id="Home">Home</h1>
+<form id="What">
+<h1 id="Learn">What do I do?</h1>
+<p>I work on providing exploartary and explanatory analysis on datasets where I publish my findings on my blog to provide insights into the data
+using data visualisation tools such as plotly via Python or R alongside machine learning tools such as scikit-learn via python.
+I also work on user interfaces programs based on javascript and publish it on my blog.
+</p>
+</form>
 </body>
 </html>
