--- a/projectgit.html
+++ b/projectgit.html
@@ -15,7 +15,7 @@
 <h2 id="project">Projects</h2>
 <form id="X">
 <h2>Project:UK annual growth 2013-2018</h2>
-<img src="evening.jpeg" width=50% height=50%>
+<img src="picture1.png" width=50% height=50%>
 <p id="paragraph">This is project consisting of exploratary analysis of the uk
 annual growth by region using plotly and datasets with a chloropeth map
 and a time series map. Further details on<a id="link" href="https://github.com/rev1221/UKannualgrowth2013-2018.github.io"> this link.</a></p>
