--- a/homegit.html
+++ b/homegit.html
@@ -15,7 +15,7 @@
 <h2 id="Home">Home</h1>
 <form id="What">
 <h1 id="Learn">What do I do?</h1>
-<p>I work on providing exploartary and explanatory analysis on datasets where I publish my findings on my blog to provide insights into the data
+<p>I work on providing exploratory and explanatory analysis on datasets where I publish my findings on my blog to provide insights into the data
 using data visualisation tools such as plotly via Python or R alongside machine learning tools such as scikit-learn via python.
 I also work on user interfaces programs based on javascript and publish it on my blog.
 </p>
