--- a/homegit.html
+++ b/homegit.html
@@ -15,7 +15,8 @@
 <h2 id="Home">Home</h1>
 <form id="What">
 <h1 id="Learn">What do I do?</h1>
-<p>I work on providing exploratory and explanatory analysis on datasets alongside any other projects that are within my interest.
+<p>
+I work on providing exploratory and explanatory analysis on datasets alongside any other projects that are within my interest.
 </p>
 </form>
 </body>
