--- a/projectgit.html
+++ b/projectgit.html
@@ -23,14 +23,16 @@ Language used:Python.
 Further details on<a id="link" href="https://github.com/rev1221/UKannualgrowth2013-2018.github.io"> this link.</a></p>
 </form>
 <form id="Y">
-<h2>Project:</h2>
+<h2>Project:Ebay Scraping</h2>
 <img src="picture2.png" width=50% height=50%>
 <p>
 This is project that web scraps ebay based on the text you put into the searchbar
 which will convert the title,price,country origin etc into an excel dataset
 (webdrivers required will be in the repository make sure you either have firefox or chrome however you're
 free to add any other webdriver).
-Languages used:Javascript,Css,Html
+Languages used:Javascript,Css,Html.
+Further details on
+<a id="link" href="https://github.com/rev1221/ebayscraping">this link.</a> 
 </p>
 </form>
 <form id="AboutProject">
