--- a/projectgit.html
+++ b/projectgit.html
@@ -18,16 +18,20 @@
 <img src="picture1.png" width=50% height=50%>
 <p id="paragraph">This is project consisting of exploratary analysis of the uk
 annual growth by region using plotly and datasets with a chloropeth map
-and a time series map.Langauage used:Python.Further details on<a id="link" href="https://github.com/rev1221/UKannualgrowth2013-2018.github.io"> this link.</a></p>
+and a time series map.
+Language used:Python. 
+Further details on<a id="link" href="https://github.com/rev1221/UKannualgrowth2013-2018.github.io"> this link.</a></p>
 </form>
 <form id="Y">
 <h2>Project:</h2>
 <img src="picture2.png" width=50% height=50%>
-<p>This is project that web scraps ebay based on the text you put into the searchbar
-   which will convert the title,price,country origin etc into an excel dataset
-  (webdrivers required will be in the repository make sure you either have firefox or chrome however you're
-  free to add any other webdriver).
-  Languages used:Javascript,Css,Html</p>
+<p>
+This is project that web scraps ebay based on the text you put into the searchbar
+which will convert the title,price,country origin etc into an excel dataset
+(webdrivers required will be in the repository make sure you either have firefox or chrome however you're
+free to add any other webdriver).
+Languages used:Javascript,Css,Html
+</p>
 </form>
 <form id="AboutProject">
 <h2>
