--- a/projectgit.html
+++ b/projectgit.html
@@ -13,7 +13,7 @@
 <li><a href="projectgit.html">Projects</a></li>
 </ul>
 <h2 id="project">Projects</h2>
-<form id="X">
+<form id="x">
 <h2>Project:UK annual growth 2013-2018</h2>
 <img src="picture1.png" width=50% height=50%>
 <p id="paragraph">This is project consisting of exploratary analysis of the uk
@@ -22,7 +22,7 @@ and a time series map.
 Language used:Python. 
 Further details on<a id="link" href="https://github.com/rev1221/UKannualgrowth2013-2018.github.io"> this link.</a></p>
 </form>
-<form id="Y">
+<form id="ebayscraping">
 <h2>Project:Ebay Scraping</h2>
 <img src="picture2.png" width=50% height=50%>
 <p>
@@ -33,6 +33,15 @@ free to add any other webdriver).
 Languages used:Javascript,Css,Html.
 Further details on
 <a id="link" href="https://github.com/rev1221/ebayscraping">this link.</a> 
+</p>
+</form>
+<form id="Floyd-algorithm">
+<h2>Project:floyd algorithm</h2>
+ <p>
+ This is the implmentation of the floyd algorithm which finds the shortest route 
+and distance between any pairs of vertices.
+Further details on
+<a id="link" href="https://github.com/rev1221/Floyd-algorithm">this link.</a> 
 </p>
 </form>
 <form id="AboutProject">
