--- a/homegit.html
+++ b/homegit.html
@@ -13,10 +13,10 @@
 <li><a href="projectgit.html">Projects</a></li>
 </ul>
 <h2 id="Home">Home</h1>
-<form id="What">
-<h1 id="Learn">What do I do?</h1>
+<form id="MAIN">
+<h1 id="QUESTION">What do I do?</h1>
 <p>
-I work on providing exploratory and explanatory analysis on datasets alongside any other projects that are within my interest.
+I work mainly on data analysis projects and some other projects as well.
 </p>
 </form>
 </body>
