--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
 <li><a href="projectgit.html">Projects</a></li>
 </ul>
 <h2 id="Home">Home</h1>
-<form id="What">
-<h1 id="Learn">What do I do?</h1>
-<p>I work on providing exploartary and explanatory analysis on datasets where I publish my findings on my blog to provide insights into the data
-using data visualisation tools such as plotly via Python or R alongside machine learning tools such as scikit-learn via python.
-I also work on user interfaces programs based on javascript and publish it on my blog.
+<form id="MAIN">
+<h1 id="QUESTION">What do I do?</h1>
+<p>
+I work mainly on data analysis projects and some other projects as well.
 </p>
 </form>
 </body>
