--- a/projectgit.html
+++ b/projectgit.html
@@ -13,7 +13,8 @@
 <li><a href="projectgit.html">Projects</a></li>
 </ul>
 <h2 id="project">Projects</h2>
-<form id="x">
+
+<form id="Project-UK-annual-growth-2013-2018">
 <h2>Project:UK annual growth 2013-2018</h2>
 <img src="picture1.png" width=50% height=50%>
 <p id="paragraph">This is project consisting of exploratary analysis of the uk
@@ -22,6 +23,7 @@ and a time series map.
 Language used:Python. 
 Further details on<a id="link" href="https://github.com/rev1221/UKannualgrowth2013-2018.github.io"> this link.</a></p>
 </form>
+
 <form id="Floyd-algorithm">
 <h2>Project:floyd algorithm</h2>
  <p>
@@ -31,7 +33,20 @@ Further details on
 <a id="link" href="https://github.com/rev1221/Floyd-algorithm">this link.</a> 
 </p>
 </form>
-<form id="AboutProject">
+
+<form id="Heart-regression-analysis">
+<h2>Project:Heart regression analysis</h2>
+ <p>
+ This is a regression analysis of the the dataset about heart disease. 
+Further details on
+<a id="link" href="https://github.com/rev1221/Heart-regression-analysis">this link.</a> 
+Also there is an explanation of the code which is available in 
+<a id="link" href="heartanalysis --note.nb.html">this link.</a> 
+</p>
+</form>
+
+
+
 <h2>
 </body>
 </html>
