--- a/projectgit.html
+++ b/projectgit.html
@@ -45,6 +45,17 @@ Also there is an explanation of the code which is available in
 </p>
 </form>
 
+<form id="Panel-regression-Grunfeld-data">
+<h2>Project:Panel regression Grunfeld data</h2>
+ <p>
+ This is an application of panel regression on GRUNFELD dataset.
+Further details on
+<a id="link" href="https://github.com/rev1221/Panel-regression-Grunfeld-data">this link.</a>
+Also there is an explanation of the code which is available in
+<a id="link" href="GRUNFELD1.nb.html">this link.</a>
+</p>
+</form>
+
 
 
 <h2>
