--- a/projectgit.html
+++ b/projectgit.html
@@ -56,6 +56,14 @@ Also there is an explanation of the code which is available in
 </p>
 </form>
 
+<form id="Text-Classification">
+<h2>Project:Text-Classification</h2>
+ <p>
+ This is an application of text classification on a dataset based on emotions.
+Further details on
+<a id="link" href="https://github.com/rev1221/Text-classification">this link.</a>
+</p>
+</form>
 
 
 <h2>
